CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(aml_decrypt)

SET(CMAKE_CXX_FLAGS "-O0 -Wall")

FIND_PACKAGE(OpenSSL REQUIRED)
MESSAGE(STATUS "OpenSSL version: ${OPENSSL_VERSION}")

IF(APPLE)
	EXECUTE_PROCESS(
		COMMAND brew --prefix openssl
		OUTPUT_VARIABLE OPENSSL_ROOT_DIR
		OUTPUT_STRIP_TRAILING_WHITESPACE)
	INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
	LINK_LIBRARIES(m ${OPENSSL_LIBRARIES})
ELSE()
	LINK_LIBRARIES(m ssl crypto)
ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME}
	main.cpp
	main.hpp)
